20241024 1200 "시큐리티 수정, oauth 로그인, 세션 마이페이지"

--- a/src/main/resources/templates/admin/auth-login.html
+++ b/src/main/resources/templates/admin/auth-login.html
@@ -81,7 +81,7 @@
                                                 <div class="d-flex gap-2 justify-content-center mt-3">
                                                     <a href="javascript: void(0);" class="btn btn-soft-primary"><i
                                                             class="ri-facebook-circle-fill"></i></a>
-                                                    <a href="javascript: void(0);" class="btn btn-soft-danger"><i
+                                                    <a href="/oauth2/authorization/google" class="btn btn-soft-danger"><i
                                                             class="ri-google-fill"></i></a>
                                                     <a href="javascript: void(0);" class="btn btn-soft-info"><i
                                                             class="ri-twitter-fill"></i></a>
