--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
@@ -134,19 +134,21 @@
             data: JSON.stringify(user)
         })
             .then((response) => {
-                if(!response.ok){
+                // HTTP 상태 코드가 200~299 범위일 때만 성공으로 간주
+                if (response.status !== 200) {
                     throw new Error('Network response was not ok');
                 }
+                return response.data;  // 서버에서 반환한 Boolean 값을 사용
             })
-            .then(data => {
-                console.log(data);
+            .then((data) => {
+                console.log(data);  // 서버에서 반환된 값 (true/false)
                 if (data === true) {
-                    window.location.href = "/api/user/login"; // 로그인 성공 시 리다이렉트
+                    window.location.href = "/api/admin/login"; // 회원가입 성공 시 리다이렉트
                 } else {
-                    alert("회원가입 실패!"); // 로그인 실패 시 알림
+                    alert("회원가입 실패!"); // 회원가입 실패 시 알림
                 }
             })
-            .catch(error => {
+            .catch((error) => {
                 console.error('Error:', error);
                 alert("서버에 문제가 발생했습니다. 다시 시도하세요."); // 서버 오류 시 메시지 표시
             });
