--- a/src/main/resources/templates/profile/wishlist.html
+++ b/src/main/resources/templates/profile/wishlist.html
@@ -63,7 +63,7 @@
                 <div class="text-content">
                     <div class="heading2 text-center">My Profile</div>
                     <div class="link flex items-center justify-center gap-1 caption1 mt-3">
-                        <a th:href="@{/}">Homepage</a>
+                        <a th:href="@{/{id}(id=${session.loginUser.id})}">Homepage</a>
                         <i class="ph ph-caret-right text-sm text-secondary2"></i>
                         <!--<div class="text-secondary2 capitalize">My Account</div>-->
                     </div>
@@ -87,31 +87,31 @@
                         </div>
                     </div>
                     <div class="menu-tab list-category w-full max-w-none lg:mt-10 mt-6">
-                        <a th:href="@{/api/user/mypage/1}"
+                        <a th:href="@{/api/user/profile/mypage/{id}(id=${session.loginUser.id})}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white active"
                            th:data-item="${dashboard}">
                             <span class="ph ph-house-line text-xl"></span>
                             <strong class="heading6">History Orders</strong>
                         </a>
-                        <a th:href="@{/api/reservation/list/1}"
+                        <a th:href="@{/api/reservation/list/{id}(id=${session.loginUser.id})}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5"
                            th:data-item="${orders}">
                             <span class="ph ph-package text-xl"></span>
-                            <strong class="heading6">My Reservations</strong>
+                            <strong class="heading6">Upcoming Reservations</strong>
                         </a>
-                        <a th:href="@{/api/review/myList/1}"
+                        <a th:href="@{/api/review/myList/{id}(id=${session.loginUser.id})}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5"
                            th:data-item="${address}">
                             <span class="ph ph-tag text-xl"></span>
                             <strong class="heading6">My Reviews</strong>
                         </a>
-                        <a th:href="@{/api/user/profile/setting/1}"
+                        <a th:href="@{/api/user/profile/setting/{id}(id=${session.loginUser.id})}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5"
                            th:data-item="${setting}">
                             <span class="ph ph-gear-six text-xl"></span>
                             <strong class="heading6">Setting</strong>
                         </a>
-                        <a th:href="@{/api/wish/list/1}"
+                        <a th:href="@{/api/wish/list/{id}(id=${session.loginUser.id})}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5">
                             <span class="ph ph-sign-out text-xl"></span>
                             <strong class="heading6">WishList</strong>
