--- a/src/main/resources/templates/admin/movie/register.html
+++ b/src/main/resources/templates/admin/movie/register.html
@@ -119,42 +119,6 @@
                         </div>
                     </li>
 
-                    <li class="dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
-                            <img th:src="@{/admin/assets/images/flags/us.jpg}" alt="user-image" class="me-0 me-sm-1" height="12">
-                            <span class="align-middle d-none d-lg-inline-block">English</span> <i
-                                class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated">
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/germany.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">German</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/italy.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">Italian</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/spain.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">Spanish</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/russia.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">Russian</span>
-                            </a>
-
-                        </div>
-                    </li>
-
                     <li class="dropdown notification-list">
                         <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
                             aria-haspopup="false" aria-expanded="false">
@@ -394,14 +358,14 @@
 
                     <li class="dropdown">
                         <a class="nav-link dropdown-toggle arrow-none nav-user" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
-                            <span class="account-user-avatar">
-                                <img th:src="@{/admin/assets/images/users/avatar-1.jpg}" alt="user-image" width="32" class="rounded-circle">
-                            </span>
+                           aria-haspopup="false" aria-expanded="false">
+                                <span class="account-user-avatar">
+                                    <img th:src="${session.loginUser.getProfileImageUrl()}" alt="user-image" width="32" class="rounded-circle">
+                                </span>
                             <span class="d-lg-block d-none">
-                                <h5 class="my-0 fw-normal">Thomson <i
-                                        class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
-                            </span>
+                                    <h5 class="my-0 fw-normal"><i
+                                            class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle" th:tex="${session.loginUser.getNickname()}"></i></h5>
+                                </span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
                             <!-- item-->
@@ -958,6 +922,7 @@
             event.preventDefault(); // 폼의 기본 동작 방지
 
             const title = document.getElementById('inputTitle').value;
+            const director = document.getElementById('inputDirector').value;
             const plot = document.getElementById('inputPlot').value;
             const selectImages = document.getElementById('inputPoster').files;
             const genres = Array.from(document.getElementById('inputGenre').selectedOptions)
@@ -977,8 +942,11 @@
 
             axios.post('/api/movie/register', {
                 title: title,
+                director: director,
                 plot: plot,
-                genre: genres
+                genre: genres,
+                runningTime: runningTime,
+                rate: rate
             }).then(res => {
                 if (res.status === 200) {
                     const movieId = res.data;
