--- a/src/main/resources/templates/admin/movie/list.html
+++ b/src/main/resources/templates/admin/movie/list.html
@@ -8,9 +8,6 @@
 <!-- Theme Config Js -->
 <script th:src="@{/admin/assets/js/config.js}"></script>
 
-<!-- App css -->
-<link th:href="@{/admin/assets/css/app.min.css}" rel="stylesheet" type="text/css" id="app-style" />
-
 <!-- Icons css -->
 <link th:href="@{/admin/assets/css/icons.min.css}" rel="stylesheet" type="text/css" />
 <!-- Custom CSS for table styling -->
@@ -139,7 +136,7 @@
         <!-- Icons css -->
         <link th:href="@{/admin/assets/css/icons.min.css}" rel="stylesheet" type="text/css" />
 
-        !-- jQuery 추가 -->
+        <!-- jQuery 추가 -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
         <!-- App js -->
@@ -215,42 +212,6 @@
                                     <input type="search" class="form-control" placeholder="Search ..."
                                            aria-label="Recipient's username">
                                 </form>
-                            </div>
-                        </li>
-
-                        <li class="dropdown">
-                            <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                               aria-haspopup="false" aria-expanded="false">
-                                <img th:src="@{/admin/assets/images/flags/us.jpg}" alt="user-image" class="me-0 me-sm-1" height="12">
-                                <span class="align-middle d-none d-lg-inline-block">English</span> <i
-                                    class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated">
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/germany.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">German</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/italy.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">Italian</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/spain.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">Spanish</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/russia.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">Russian</span>
-                                </a>
-
                             </div>
                         </li>
 
@@ -490,54 +451,25 @@
                                 <i class="ri-moon-line fs-22"></i>
                             </div>
                         </li>
-
                         <li class="dropdown">
                             <a class="nav-link dropdown-toggle arrow-none nav-user" data-bs-toggle="dropdown" href="#" role="button"
                                aria-haspopup="false" aria-expanded="false">
                                 <span class="account-user-avatar">
-                                    <img th:src="@{/admin/assets/images/users/avatar-1.jpg}" alt="user-image" width="32" class="rounded-circle">
+                                    <img th:src="${session.loginUser.getProfileImageUrl()}" alt="user-image" width="32" class="rounded-circle">
                                 </span>
                                 <span class="d-lg-block d-none">
-                                    <h5 class="my-0 fw-normal">Thomson <i
-                                            class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
+                                    <h5 class="my-0 fw-normal"> <i
+                                            class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle" th:text="${session.loginUser.getNickname()}"></i></h5>
                                 </span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
                                 <!-- item-->
-                                <div class=" dropdown-header noti-title">
-                                    <h6 class="text-overflow m-0">Welcome !</h6>
-                                </div>
-
-                                <!-- item-->
-                                <a href="pages-profile.html" class="dropdown-item">
-                                    <i class="ri-account-circle-line fs-18 align-middle me-1"></i>
-                                    <span>My Account</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="pages-profile.html" class="dropdown-item">
-                                    <i class="ri-settings-4-line fs-18 align-middle me-1"></i>
-                                    <span>Settings</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="pages-faq.html" class="dropdown-item">
-                                    <i class="ri-customer-service-2-line fs-18 align-middle me-1"></i>
-                                    <span>Support</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="auth-lock-screen.html" class="dropdown-item">
-                                    <i class="ri-lock-password-line fs-18 align-middle me-1"></i>
-                                    <span>Lock Screen</span>
-                                </a>
-
-                                <!-- item-->
-                                <a th:href="@{/}" class="dropdown-item">
+                                <a th:href="@{/api/admin/logout}" class="dropdown-item">
                                     <i class="ri-logout-box-line fs-18 align-middle me-1"></i>
                                     <span>Logout</span>
                                 </a>
                             </div>
+                        </li>
                         </li>
                     </ul>
                 </div>
@@ -591,9 +523,6 @@
                             </a>
                             <div class="collapse" id="sidebarPages">
                                 <ul class="side-nav-second-level">
-                                    <li>
-                                        <a th:href="@{/api/admin/pages-starter}">Starter Page</a>
-                                    </li>
                                     <li>
                                         <a th:href="@{/api/admin/movie}">Movie</a>
                                     </li>
@@ -921,7 +850,7 @@
         <script th:src="@{/admin/assets/js/pages/apex.init.js}"></script>
         <!-- Vendor js -->
         <script th:src="@{/admin/assets/js/vendor.min.js}"></script>
-        
+
         <!-- App js -->
         <script th:src="@{/admin/assets/js/app.min.js}"></script>
 
