--- a/src/main/resources/templates/admin/theater/register.html
+++ b/src/main/resources/templates/admin/theater/register.html
@@ -95,42 +95,6 @@
           </div>
         </li>
 
-        <li class="dropdown">
-          <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-             aria-haspopup="false" aria-expanded="false">
-            <img th:src="@{/admin/assets/images/flags/us.jpg}" alt="user-image" class="me-0 me-sm-1" height="12">
-            <span class="align-middle d-none d-lg-inline-block">English</span> <i
-                  class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated">
-
-            <!-- item-->
-            <a href="javascript:void(0);" class="dropdown-item">
-              <img th:src="@{/admin/assets/images/flags/germany.jpg}" alt="user-image" class="me-1" height="12"> <span
-                    class="align-middle">German</span>
-            </a>
-
-            <!-- item-->
-            <a href="javascript:void(0);" class="dropdown-item">
-              <img th:src="@{/admin/assets/images/flags/italy.jpg}" alt="user-image" class="me-1" height="12"> <span
-                    class="align-middle">Italian</span>
-            </a>
-
-            <!-- item-->
-            <a href="javascript:void(0);" class="dropdown-item">
-              <img th:src="@{/admin/assets/images/flags/spain.jpg}" alt="user-image" class="me-1" height="12"> <span
-                    class="align-middle">Spanish</span>
-            </a>
-
-            <!-- item-->
-            <a href="javascript:void(0);" class="dropdown-item">
-              <img th:src="@{/admin/assets/images/flags/russia.jpg}" alt="user-image" class="me-1" height="12"> <span
-                    class="align-middle">Russian</span>
-            </a>
-
-          </div>
-        </li>
-
         <li class="dropdown notification-list">
           <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
              aria-haspopup="false" aria-expanded="false">
@@ -371,13 +335,13 @@
         <li class="dropdown">
           <a class="nav-link dropdown-toggle arrow-none nav-user" data-bs-toggle="dropdown" href="#" role="button"
              aria-haspopup="false" aria-expanded="false">
-                            <span class="account-user-avatar">
-                                <img th:src="@{/admin/assets/images/users/avatar-1.jpg}" alt="user-image" width="32" class="rounded-circle">
-                            </span>
+                                <span class="account-user-avatar">
+                                    <img th:src="${session.loginUser.getProfileImageUrl()}" alt="user-image" width="32" class="rounded-circle">
+                                </span>
             <span class="d-lg-block d-none">
-                                <h5 class="my-0 fw-normal">Thomson <i
-                                        class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
-                            </span>
+                                    <h5 class="my-0 fw-normal"><i
+                                            class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle" th:tex="${session.loginUser.getNickname()}"></i></h5>
+                                </span>
           </a>
           <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
             <!-- item-->
@@ -468,9 +432,6 @@
           </a>
           <div class="collapse" id="sidebarPages">
             <ul class="side-nav-second-level">
-              <li>
-                <a th:href="@{/api/admin/pages-starter}">Starter Page</a>
-              </li>
               <li>
                 <a th:href="@{/api/admin/movie}">Movie</a>
               </li>
