--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,22 +26,19 @@
                     <a href="/" id="logo" title="Moviemates" class="logo-image" th:data-bg-image="@{/images/movieLogo.jpg}">Moviemates</a>
                 </div>
                 <div class="col-md-4 col-md-offset-2 col-sm-6 col-xs-8 phl0">
+
                     <div class="header_ticket" th:if="${session.loginUser != null}">
-                        <a th:href="@{/logout}">Logout</a>
+                        <a th:href="@{/api/user/mypage/{id}(id=${session.loginUser.id})}">Mypage</a>
                     </div>
                     <div class="header_ticket" th:if="${session.loginUser == null}">
                         <a th:href="@{/api/user/login}">Login</a>
                     </div>
                     <div class="header_ticket" th:if="${session.loginUser != null}">
-                        <a th:href="@{/api/user/mypage/{id}(id=${session.loginUser.id})}">Mypage</a>
+                        <a th:href="@{/logout}">Logout</a>
                     </div>
-                    <div class="header_ticket">
-                        <a href="#order" class="order_btn">Order</a>
-                        <span>3</span>
-                    </div>
-                    <div class="overlay" id="overlay">
-                        <a href="javascript:;" id="header-search"></a>
-                    </div>
+                    <a href="javascript:;" id="header-search">
+                        <i class="fa fa-search"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -514,12 +511,12 @@
     </div>
     <!-- Overlay Search -->
     <div id="overlay-search">
-        <form method="get" action="./">
+        <form method="get" action="/api/movie/search">
             <label>
-                <input type="text" name="s" placeholder="Search..." autocomplete="off">
-            <button type="submit">
-                <i class="fa fa-search"></i>
-            </button>
+                <input type="text" name="searchStr" placeholder="Search..." autocomplete="off" style="color: black" id="searchStr">
+                <button type="submit">
+                    <i class="fa fa-search"></i>
+                </button>
             </label>
         </form>
         <a href="javascript:" class="close-window"></a>
@@ -588,7 +585,6 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script> <!-- Iamport SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/packages.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/scripts.min.js}"></script>
