--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -80,31 +80,19 @@
                     <a th:href="@{/}" id="logo" title="MovieMates" class="logo-image-white" th:data-bg-image="@{/images/movieLogo.jpg}">Moviemates</a>
                 </div>
                 <div class="col-md-4 col-md-offset-2 col-sm-6 col-xs-8 phl0">
-                    <div class="header_author">
+                    <div class="header_author" th:if="${session.loginUser != null}">
                         <a href="#">User</a>
-                        <img th:src="@{/images/user.png}" class="user" alt="user">
+                        <img th:src="${session.loginUser.getProfileImageUrl()}" width="39" height="39" class="user" alt="user">
                     </div>
-                    <div class="header_ticket">
-                        <a href="#order" class="order_btn">My tickets</a>
-                        <span>3</span>
+                    <div class="header_ticket" th:if="${session.loginUser != null}">
+                        <a th:href="@{/api/user/mypage/{id}(id=${session.loginUser.id})}">Mypage</a>
                     </div>
-                    <a href="javascript:;" id="header-search"></a>
-                    <div class="button_container" id="toggle">
-                        <span class="top"></span>
-                        <span class="middle"></span>
-                        <span class="bottom"></span>
+                    <div class="header_ticket" th:if="${session.loginUser == null}">
+                        <a th:href="@{/api/user/login}">Login</a>
                     </div>
-                    <div class="overlay" id="overlay">
-                        <a href="javascript:;" class="close-window"></a>
-                        <nav class="overlay-menu">
-                            <ul>
-                                <li><a th:href="@{/{id}(id=${session.loginUser.id})}">Home</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="single.html">Single</a></li>
-                                <li><a href="#order" class="order_btn">Order</a></li>
-                            </ul>
-                        </nav>
-                    </div>
+                    <a href="javascript:;" id="header-search">
+                        <i class="fa fa-search"></i>
+                    </a>
                 </div>
             </div>
         </div>
