20241025 1200 "오더 수정, 리뷰쓰기 페이지 추가 작업"

--- a/src/main/resources/templates/admin/auth-login.html
+++ b/src/main/resources/templates/admin/auth-login.html
@@ -74,6 +74,9 @@
                                                 <button class="btn btn-soft-primary w-100" type="button" onclick="submitForm(event)">
                                                     <i class="ri-login-circle-fill me-1"></i> <span class="fw-bold">Log In</span>
                                                 </button>
+                                                <a th:href="@{/api/user/register}" class="btn btn-soft-primary w-100">
+                                                    <i class="ri-login-circle-fill me-1"></i> <span class="fw-bold">register</span>
+                                                </a>
                                             </div>
 
                                             <div class="text-center mt-4">
