--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -143,7 +143,7 @@
             .then((data) => {
                 console.log(data);  // 서버에서 반환된 값 (true/false)
                 if (data === true) {
-                    window.location.href = "/api/admin/login"; // 회원가입 성공 시 리다이렉트
+                    window.location.href = "/api/user/login"; // 회원가입 성공 시 리다이렉트
                 } else {
                     alert("회원가입 실패!"); // 회원가입 실패 시 알림
                 }
