20241025 2347 - single 부분수정 및 search 페이지 생성 및 기능 연결

--- a/src/main/resources/templates/admin/auth-login.html
+++ b/src/main/resources/templates/admin/auth-login.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Log In | Velonic - Bootstrap 5 Admin & Dashboard Template</title>
+    <title>Log In | MovieMates</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="A fully responsive admin theme which can be used to build CRM, CMS,ERP etc." name="description" />
     <meta content="Techzaa" name="author" />
 
     <!-- App favicon -->
-    <link rel="shortcut icon" th:href="@{/admin/assets/images/favicon.ico}">
+    <link rel="shortcut icon" th:href="@{/images/movieLogo.jpg}">
 
     <!-- Theme Config Js -->
     <script th:src="@{/admin/assets/js/config.js}"></script>
@@ -35,10 +35,10 @@
                                 <div class="d-flex flex-column h-100">
                                     <div class="auth-brand p-4">
                                         <a href="index.html" class="logo-light">
-                                            <img th:src="@{/admin/assets/images/logo.png}" alt="logo" height="22">
+                                            <img th:src="@{/images/movieLogo.jpg}" alt="logo" height="60">
                                         </a>
                                         <a href="index.html" class="logo-dark">
-                                            <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo" height="22">
+                                            <img th:src="@{/images/movieLogo.jpg}" alt="dark logo" height="60">
                                         </a>
                                     </div>
                                     <div class="p-4 my-auto">
@@ -117,7 +117,7 @@
 
     <footer class="footer footer-alt fw-medium">
         <span class="text-dark">
-            <script>document.write(new Date().getFullYear())</script> © Velonic - Theme by Techzaa
+            <script>document.write(new Date().getFullYear())</script> © MovieMates
         </span>
     </footer>
     <!-- Vendor js -->
