--- a/src/main/resources/templates/admin/schedule/list.html
+++ b/src/main/resources/templates/admin/schedule/list.html
@@ -3,7 +3,7 @@
 <head th:replace="~{/admin/head :: headContent}"></head>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jspreadsheet-ce/dist/jspreadsheet.min.css" type="text/css" />
 <!-- App favicon -->
-<link rel="shortcut icon" th:href="@{/admin/assets/images/favicon.ico}">
+<link rel="shortcut icon" th:href="@{/images/movieLogo.jpg}">
 
 <!-- Theme Config Js -->
 <script th:src="@{/admin/assets/js/config.js}"></script>
