--- a/src/main/resources/templates/admin/schedule/register.html
+++ b/src/main/resources/templates/admin/schedule/register.html
@@ -424,20 +424,20 @@
             <!-- Brand Logo Light -->
             <a th:href="@{/api/admin}" class="logo logo-light">
                 <span class="logo-lg">
-                    <img th:src="@{/admin/assets/images/logo.png}" alt="logo">
+                    <img th:src="@{/images/movieLogo.jpg}" alt="logo">
                 </span>
                 <span class="logo-sm">
-                    <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
+                    <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
                 </span>
             </a>
 
             <!-- Brand Logo Dark -->
             <a th:href="@{/api/admin}" class="logo logo-dark">
                 <span class="logo-lg">
-                    <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo">
+                    <img th:src="@{/images/movieLogo.jpg}" alt="dark logo">
                 </span>
                 <span class="logo-sm">
-                    <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
+                    <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
                 </span>
             </a>
 
